@@ -3,6 +3,7 @@
 * All string parameters of difx_input have parameterized lengths
 * Get rid of strcpy and strncpy in favor of more friendly snprintf
 * Add optional VEX FILE parameter to .calc file
+* Introduce new enum SamplingType 
 
 3.0
 * Includes the following changes merged (hopefully correctly) from the DiFX-1.5 branch;
